# vcon-ai-cohort-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  roles.yaml  start.sh
app/: cli.py  main.py
app/core/: config.py  rbac.py  responses.py  security.py
app/db/: session.py
app/features/auth/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
app/features/cohorts/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
app/features/dashboard/: dependencies.py  router.py  schemas.py  service.py
app/features/organizations/: dependencies.py  repository.py  router.py  schemas.py  service.py
app/features/participants/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
app/features/sessions/: dependencies.py  models.py  router.py  (+3 more)
app/infrastructure/: redis.py
app/services/: ai_service.py  cloudinary_service.py  vcon_service.py
app/worker/: celery_app.py  tasks.py
docs/: backend_tickets.md  frontend_tickets.md  general_tickets.md  product_architecture.md  product_spec.md
migrations/: env.py
migrations/versions/: 26711688d9b5_add_key_moments_json_to_session.py  34c9003a6e7a_split_auth_and_profile_models.py  43912ffef91f_new_migration.py  68f7ef19cbfa_epic_1_models.py  b2712b81f716_add_ai_features.py  e3b2c4dfbb5a_add_roles_for_users.py
tests/: conftest.py
tests/auth/: test_auth.py  test_rbac.py
tests/cohorts/: test_cohorts.py
tests/dashboard/: test_dashboard.py
tests/services/: test_vcon_service.py
tests/sessions/: test_upload.py
(+1 files in other folders)
